bug 795905 call proxyservice::asyncresolve() when direct in case of filters r=biesi

--HG--
extra : rebase_source : c0d97222a8c5bad3ed8120c5a5a9cfdb7d3b8d6f